Bug 210824 Double-clicking biff icon causes JavaScript error in msgMail3PaneWindow.js p=gautheri@noos.fr r=me sr=mscott